Enhances authentication and security
Improves security configurations by implementing authentication enhancements.

- Adds dedicated authentication controller.
- Configures public endpoints.
- Updates security dependencies.
- Logs failed login attempts with reason.
- Refactors CORS configuration to use constants.
- Removes version field from entities.
- Lazy loads AuthenticationManager to avoid circular dependency.